--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
-            'Authorization': `Bearer YOUR_OPENAI_API_KEY`
+            'Authorization': `Bearer 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`
           },
           body: JSON.stringify({
             model: "text-davinci-003",
